# imap_terminal

./: CMakeLists.txt  README.md  imap_terminal.sln  imap_terminal.vcxproj  imap_terminal.vcxproj.filters  license.md  requirements.md
docs/: imag_termianl_design_spec.md  imap_terminal.tex
lib/windows/curl/lib/: libcurl.exp  libcurl.lib
lib/windows/libvmime/: vmime 2005.vcproj  vmime 2010.vcxproj
lib/windows/libvmime/examples/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  viewer.cpp
lib/windows/libvmime/src/openssl/: bn.h  buffer.h  conf.h  kssl.h  rand.h  ssl.h  ssl3.h  symhacks.h  tls1.h  x509v3.h
lib/windows/libvmime/src/vmime/: address.cpp  address.hpp  addressList.cpp  addressList.hpp  attachment.hpp  attachmentHelper.cpp  attachmentHelper.hpp  base.cpp  base.hpp  body.cpp  body.hpp  bodyPart.cpp  bodyPart.hpp  bodyPartAttachment.cpp  bodyPartAttachment.hpp  charset.cpp  charset.hpp  charsetConverter.cpp  charsetConverter.hpp  charsetConverterOptions.cpp  charsetConverterOptions.hpp  charsetConverter_Win.cpp  charsetConverter_Win.hpp  charsetConverter_iconv.cpp  charsetConverter_iconv.hpp  charsetConverter_icu.cpp  charsetConverter_icu.hpp  charsetConverter_idna.cpp  component.cpp  (+104 more)
lib/windows/libvmime/tests/: testRunner.cpp  testUtils.cpp  testUtils.hpp
src/: CommandLine.cpp  CommandLine.h  curl_exception.cpp  curl_exception.h  curl_session.cpp  curl_session.h  example.cpp  imap_operations.cpp  imap_session.cpp  imap_session.h  imap_terminal.cpp  imap_terminal.h  iob.cpp  main.cpp  utils.cpp  utils.h
(+326 files in other folders)
